# TheChesscadeCanon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  makefile  rules.h
assets/: 1 ONLY EDIT THE COPY OF THIS FOLDER IN THE PROJECT ROOT.txt  masks.txt  piece_painter.py
assets/tedagame_piano/: rename.py
core/: model.h
export/: api.cpp  api.h
godot_43_frontend/: godot.windows.editor.x86_64.lnk
godot_43_frontend/app/: banner.gd  banner.tscn  board.gd  chesscade_adapter.gd  chesscade_adapter.tscn  chesscade_model.tscn  deck.gd  icon.svg.import  main.gd  main.tscn  meter.gd  meter.tscn  project.godot  readout.gd  rules.gd  rules.tscn
godot_43_frontend/app/assets/: X.png.import  X_selected.png.import  back.png.import  back_selected.png.import  cursor.png.import  equal_ink.png.import  ledfont-sharp-Regular.otf.import  masks.txt  pause.png.import  piece_painter.py  play.png.import  play_selected.png.import
godot_43_frontend/app/assets/black_pieces/: bk.png.import  bn.png.import  wp.png.import
godot_43_frontend/app/assets/black_white_pieces/: bb.png.import  bp.png.import  wk.png.import  wn.png.import  wp.png.import  wq.png.import
godot_43_frontend/app/assets/blue_pieces/: bk.png.import  wb.png.import  wn.png.import
godot_43_frontend/app/assets/cyan_pieces/: bb.png.import  bn.png.import  bp.png.import  wn.png.import  wr.png.import
godot_43_frontend/app/assets/equal-ink/: equal-ink.ttf.import  license.txt
godot_43_frontend/app/assets/grey_pieces/: bb.png.import  bn.png.import  bp.png.import  bq.png.import  br.png.import  wn.png.import  wp.png.import  wr.png.import
godot_43_frontend/app/assets/magenta_pieces/: bn.png.import  bp.png.import  br.png.import  wq.png.import  wr.png.import
godot_43_frontend/app/assets/orange_pieces/: bb.png.import  bq.png.import  br.png.import  wp.png.import  wq.png.import  wr.png.import
godot_43_frontend/app/assets/pieces/: bp.png.import  bq.png.import  wb.png.import  wn.png.import  wp.png.import  wq.png.import
godot_43_frontend/app/assets/purple_pieces/: bp.png.import  bq.png.import  wn.png.import  wr.png.import
godot_43_frontend/app/assets/red_pieces/: bk.png.import  bn.png.import  bp.png.import  bq.png.import  wk.png.import  wn.png.import  wq.png.import
godot_43_frontend/app/assets/shadow_pieces/: bb.png.import  bk.png.import  bn.png.import  bp.png.import  bq.png.import  wn.png.import  wq.png.import  wr.png.import
godot_43_frontend/app/assets/white_pieces/: bk.png.import  bn.png.import  br.png.import  wb.png.import  wk.png.import  wp.png.import  (+1 more)
godot_frontend/: SConstruct
godot_frontend/_app/: main.gd  main.tscn  project.godot
godot_frontend/app/: bb.png.import  bk.png.import  bn.png.import  board.gd  board.gdshader  board.tscn  bp.png.import  bq.png.import  br.png.import  chesscade_adapter.gd  chesscade_adapter.tscn  chesscade_model.gd  chesscade_model.tscn  deck.gd  deck.tscn  icon.svg.import  main.gd  main.tscn  maze3.png.import  menu_button.tscn  meter.gd  meter.tscn  model.gd  pixel_stretcher.gd  pixel_stretcher.tscn  project.godot  readout.tscn  readout_label_settings.tres  shovelcore_label_settings.tres
godot_frontend/app/assets/: X_selected.png.import  back.png.import  ledfont-sharp-Regular.otf.import  pause_selected.png.import  pixels.txt  play.png.import  shovelcore_Bw.fnt.import  shovelcore_Bw.png.import
godot_frontend/src/: chesscade_adapter.cpp  chesscade_adapter.h  register_types.cpp  register_types.h
html_frontend/: chesscade_adapter.js  index.html
private/: control.c  control.h  main.c  main.h  model.c  model.h  platform.c  platform.h  view.c  view.h
public/: api.cpp  api.h
pygame_frontend/: audio.py  audio_video.py  instrument.py  lexicon.py  librarian.py  pygame_frontend.py  pygame_frontend.pyproj  pygame_frontend.sln  res.py  style.py  video.py
pygame_frontend/assets/: bits.txt  equal_ink.tres  piece_byter.py
pygame_frontend/assets/equal-ink/: readme.txt
pygame_frontend/env1/Scripts/: activate  activate.bat
src/: def.h
src/core/: board.c  board.h  config.h  game.c  game.h  histotrie.c  histotrie.h  model.c  model.h  simulator.c  simulator.h
src/export/: api.cpp  api.h
src/standalone/: application.c  application.h  control.c  control.h  main.c  main.h  platform.h  tests.c  tests.h  view.c  view.h
standalone/: control.c  view.c
(+84 files in other folders)
